# autospieler

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  run.sh
.github/workflows/: deploy.yml
src/: main.rs  office.rs
