[package]
name = "dauerzusagesendung"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emoji-printer = "0.4.3"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "cookies"] }
scraper = "0.17.1"
