[package]
name = "autospieler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4.39"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "cookies", "json"] }
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
